Fixing overflow value

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -507,7 +507,7 @@ ul.row {
 
 .card-work .card-outer {
     position: relative;
-    overflow: hide;
+    overflow: hidden;
 }
 
 .card-work .card-image img {
